# om.code

./: .gitattributes  .gitignore  .gitmodules  README.md
a_npc/: npc 情绪模拟.md
c#/: UseFullUtils.md
c#/code/: code.sln
c#/other/: Readme.md
c++/Any/: Any.hpp
c++/c++ 静态变量初始化/: InitializeAndCleanup.cpp  InitializeAndCleanup.h
cmake.projs/: .gitignore  ReadMe.md
cmake.projs/cmake.utils/: funcs.cmake
cmake.projs/hi/: CMakeLists.txt
cmake.projs/hi/src/: a.pb.cc  a.pb.h  a.proto  main.cpp
cmake.projs/protobuf/: CMakeLists.txt
cpp-test/: .gitignore  test-ecs.cpp  test-fastmod.c  test-number.cpp  test-prime.cpp  test-ringbuffer.cpp  test-template.cpp  test-template.h  test-template1.cpp  test-template2.cpp  test.cpp  utils.h
cpp/c++ 静态变量初始化/: InitializeAndCleanup.cpp
dart/: test.dart
dotnet/: .gitignore
dotnet/FileCodeTool/: FileCodeTool.csproj  (+2 more)
dotnet/cpp/: .gitignore  CMakeLists.txt  GenProj.bat  hello.c
go/: .editorconfig
linux/: .bash_profile  .bashrc  .vimrc  ReadMe.md  install.shell.env.sh
my_translate/: .gitignore  ReadMe.md  SubtitleTranslate - MyTranslate.as  SubtitleTranslate - bing.as  convert_model.bat  copy_subtitle_to_potplayer.bat  launcher.py  my_lang_utils.py  my_translate.py  my_translate_web.py  tray_launch_my_translate.pyw  tray_launcher.py
python/: analyze_video.py  convert_my_video.py  convert_to_av1_mp4.py  create_text_ico.py  export_video_subtitle.py  files_to_traditional_chinese.py  files_to_utf8.py  langconv.py  test_langconv.py
shader/: Noiselab.shader.toy.glsl
windows/: change-filename-to-run-xx-py.bat
(+136 files in other folders)
